Release 1.20.3-pre1 (snapshot)