@@ -1,122 +1,79 @@
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.Lists;
-import java.util.List;
-import javax.annotation.Nullable;
+import java.util.Map;
+import java.util.Optional;
+import java.util.function.Function;
 
-public class bor extends bnw<ceo> {
-   private static final int d = 200;
-   public static final float c = 0.5F;
-   @Nullable
-   private hx e;
-   private long f;
-   private int g;
-   private final List<hx> h = Lists.newArrayList();
+public class bor<E extends bmk & ces> extends bob<E> {
+   private static final int c = 3;
+   private static final int d = 60;
+   private final Function<bmk, Optional<bpp>> e;
+   private final float f;
 
-   public bor() {
-      super(ImmutableMap.of(bvh.n, bvi.b, bvh.m, bvi.b, bvh.f, bvi.a));
+   public bor(Function<bmk, Optional<bpp>> $$0, float $$1, int $$2) {
+      super(Map.of(bvm.n, bvn.c, bvm.m, bvn.c, bvm.aO, bvn.c), $$2);
+      this.e = $$0;
+      this.f = $$1;
    }
 
-   protected boolean a(amz $$0, ceo $$1) {
-      if (!$$0.Z().b(cte.c)) {
-         return false;
-      } else if ($$1.gp().b() != cer.g) {
+   @Override
+   protected boolean a(and $$0, E $$1) {
+      return this.b($$1);
+   }
+
+   @Override
+   protected boolean a(and $$0, E $$1, long $$2) {
+      return this.b($$1);
+   }
+
+   @Override
+   protected void d(and $$0, E $$1, long $$2) {
+      this.e.apply($$1).ifPresent($$1x -> bod.a($$1, $$1x, this.f, 3));
+   }
+
+   @Override
+   protected void c(and $$0, E $$1, long $$2) {
+      Optional<bpp> $$3 = this.e.apply($$1);
+      if (!$$3.isEmpty()) {
+         bpp $$4 = $$3.get();
+         double $$5 = $$4.a().f($$1.br());
+         if ($$5 < 3.0) {
+            cmx $$6 = $$1.A().a(0, 1);
+            if (!$$6.b()) {
+               a($$1, $$6, a($$4));
+               if ($$1 instanceof bzb $$7) {
+                  bzc.a((bmk)$$7).ifPresent($$2x -> this.a($$4, $$6, $$2x));
+               }
+
+               $$1.dO().a(bvm.aO, 60);
+            }
+         }
+      }
+   }
+
+   private void a(bpp $$0, cmx $$1, ane $$2) {
+      hx $$3 = $$0.b().d();
+      am.Y.a($$2, $$3, $$1);
+   }
+
+   private boolean b(E $$0) {
+      if ($$0.A().ai_()) {
          return false;
       } else {
-         hx.a $$2 = $$1.dm().j();
-         this.h.clear();
-
-         for (int $$3 = -1; $$3 <= 1; $$3++) {
-            for (int $$4 = -1; $$4 <= 1; $$4++) {
-               for (int $$5 = -1; $$5 <= 1; $$5++) {
-                  $$2.b($$1.dr() + (double)$$3, $$1.dt() + (double)$$4, $$1.dx() + (double)$$5);
-                  if (this.a($$2, $$0)) {
-                     this.h.add(new hx($$2));
-                  }
-               }
-            }
-         }
-
-         this.e = this.a($$0);
-         return this.e != null;
+         Optional<bpp> $$1 = this.e.apply($$0);
+         return $$1.isPresent();
       }
    }
 
-   @Nullable
-   private hx a(amz $$0) {
-      return this.h.isEmpty() ? null : this.h.get($$0.F_().a(this.h.size()));
+   private static els a(bpp $$0) {
+      return $$0.a().b(0.0, 1.0, 0.0);
    }
 
-   private boolean a(hx $$0, amz $$1) {
-      dja $$2 = $$1.a_($$0);
-      cwj $$3 = $$2.b();
-      cwj $$4 = $$1.a_($$0.d()).b();
-      return $$3 instanceof cye && ((cye)$$3).h($$2) || $$2.i() && $$4 instanceof czg;
-   }
-
-   protected void a(amz $$0, ceo $$1, long $$2) {
-      if ($$2 > this.f && this.e != null) {
-         $$1.dO().a(bvh.n, new bnz(this.e));
-         $$1.dO().a(bvh.m, new bvk(new bnz(this.e), 0.5F, 1));
+   public static void a(bmk $$0, cmx $$1, els $$2) {
+      els $$3 = new els(0.2F, 0.3F, 0.2F);
+      bod.a($$0, $$1, $$2, $$3, 0.2F);
+      cto $$4 = $$0.dM();
+      if ($$4.X() % 7L == 0L && $$4.z.j() < 0.9) {
+         float $$5 = ac.<Float>a(bzb.d, $$4.F_());
+         $$4.a(null, $$0, arr.g, ars.g, 1.0F, $$5);
       }
-   }
-
-   protected void b(amz $$0, ceo $$1, long $$2) {
-      $$1.dO().b(bvh.n);
-      $$1.dO().b(bvh.m);
-      this.g = 0;
-      this.f = $$2 + 40L;
-   }
-
-   protected void c(amz $$0, ceo $$1, long $$2) {
-      if (this.e == null || this.e.a($$1.dk(), 1.0)) {
-         if (this.e != null && $$2 > this.f) {
-            dja $$3 = $$0.a_(this.e);
-            cwj $$4 = $$3.b();
-            cwj $$5 = $$0.a_(this.e.d()).b();
-            if ($$4 instanceof cye && ((cye)$$4).h($$3)) {
-               $$0.a(this.e, true, $$1);
-            }
-
-            if ($$3.i() && $$5 instanceof czg && $$1.gy()) {
-               bkd $$6 = $$1.A();
-
-               for (int $$7 = 0; $$7 < $$6.b(); $$7++) {
-                  cmr $$8 = $$6.a($$7);
-                  boolean $$9 = false;
-                  if (!$$8.b() && $$8.a(asj.aU) && $$8.d() instanceof ckk $$10) {
-                     dja $$11 = $$10.e().o();
-                     $$0.b(this.e, $$11);
-                     $$0.a(dnk.i, this.e, dnk.a.a($$1, $$11));
-                     $$9 = true;
-                  }
-
-                  if ($$9) {
-                     $$0.a(null, (double)this.e.u(), (double)this.e.v(), (double)this.e.w(), arm.fJ, arn.e, 1.0F, 1.0F);
-                     $$8.h(1);
-                     if ($$8.b()) {
-                        $$6.a($$7, cmr.f);
-                     }
-                     break;
-                  }
-               }
-            }
-
-            if ($$4 instanceof cye && !((cye)$$4).h($$3)) {
-               this.h.remove(this.e);
-               this.e = this.a($$0);
-               if (this.e != null) {
-                  this.f = $$2 + 20L;
-                  $$1.dO().a(bvh.m, new bvk(new bnz(this.e), 0.5F, 1));
-                  $$1.dO().a(bvh.n, new bnz(this.e));
-               }
-            }
-         }
-
-         this.g++;
-      }
-   }
-
-   protected boolean d(amz $$0, ceo $$1, long $$2) {
-      return this.g < 200;
    }
 }
