@@ -1,55 +1,17 @@
-import java.util.List;
+import com.google.common.collect.ImmutableList;
 
 public class qi {
-   public static final ahc<dra<?, ?>> a = qh.a("ice_spike");
-   public static final ahc<dra<?, ?>> b = qh.a("ice_patch");
-   public static final ahc<dra<?, ?>> c = qh.a("forest_rock");
-   public static final ahc<dra<?, ?>> d = qh.a("iceberg_packed");
-   public static final ahc<dra<?, ?>> e = qh.a("iceberg_blue");
-   public static final ahc<dra<?, ?>> f = qh.a("blue_ice");
-   public static final ahc<dra<?, ?>> g = qh.a("lake_lava");
-   public static final ahc<dra<?, ?>> h = qh.a("disk_clay");
-   public static final ahc<dra<?, ?>> i = qh.a("disk_gravel");
-   public static final ahc<dra<?, ?>> j = qh.a("disk_sand");
-   public static final ahc<dra<?, ?>> k = qh.a("freeze_top_layer");
-   public static final ahc<dra<?, ?>> l = qh.a("disk_grass");
-   public static final ahc<dra<?, ?>> m = qh.a("bonus_chest");
-   public static final ahc<dra<?, ?>> n = qh.a("void_start_platform");
-   public static final ahc<dra<?, ?>> o = qh.a("desert_well");
-   public static final ahc<dra<?, ?>> p = qh.a("spring_lava_overworld");
-   public static final ahc<dra<?, ?>> q = qh.a("spring_lava_frozen");
-   public static final ahc<dra<?, ?>> r = qh.a("spring_water");
+   public static final ahf<drg<?, ?>> a = qj.a("end_spike");
+   public static final ahf<drg<?, ?>> b = qj.a("end_gateway_return");
+   public static final ahf<drg<?, ?>> c = qj.a("end_gateway_delayed");
+   public static final ahf<drg<?, ?>> d = qj.a("chorus_plant");
+   public static final ahf<drg<?, ?>> e = qj.a("end_island");
 
-   public static void a(pc<dra<?, ?>> $$0) {
-      qh.a($$0, a, drn.s);
-      qh.a($$0, b, drn.G, new dto(dwa.a(cwl.iC), dpq.c(List.of(cwl.j, cwl.i, cwl.l, cwl.k, cwl.fl, cwl.dP, cwl.dO)), bjg.a(2, 3), 1));
-      qh.a($$0, c, drn.F, new dtk(cwl.cn.o()));
-      qh.a($$0, d, drn.E, new dtk(cwl.iC.o()));
-      qh.a($$0, e, drn.E, new dtk(cwl.mW.o()));
-      qh.a($$0, f, drn.D);
-      qh.a($$0, g, drn.H, new dsc.a(dvs.a(cwl.H.o()), dvs.a(cwl.b.o())));
-      qh.a($$0, h, drn.G, new dto(dwa.a(cwl.dR), dpq.c(List.of(cwl.j, cwl.dR)), bjg.a(2, 3), 1));
-      qh.a($$0, i, drn.G, new dto(dwa.a(cwl.L), dpq.c(List.of(cwl.j, cwl.i)), bjg.a(2, 5), 2));
-      qh.a(
-         $$0, j, drn.G, new dto(new dwa(dvs.a(cwl.I), List.of(new dwa.a(dpq.a(ic.a.q(), cwl.a), dvs.a(cwl.aV)))), dpq.c(List.of(cwl.j, cwl.i)), bjg.a(2, 6), 2)
-      );
-      qh.a($$0, k, drn.u);
-      qh.a(
-         $$0,
-         l,
-         drn.G,
-         new dto(
-            new dwa(dvs.a(cwl.j), List.of(new dwa.a(dpq.a(dpq.b(dpq.b(ic.b.q()), dpq.a(ic.b.q(), eel.c))), dvs.a(cwl.i)))),
-            dpq.c(List.of(cwl.j, cwl.sI)),
-            bjg.a(2, 6),
-            2
-         )
-      );
-      qh.a($$0, m, drn.ac);
-      qh.a($$0, n, drn.n);
-      qh.a($$0, o, drn.o);
-      qh.a($$0, p, drn.k, new dum(eel.e.g(), true, 4, 1, il.a(cwj::r, cwl.b, cwl.c, cwl.e, cwl.g, cwl.sJ, cwl.qz, cwl.qN, cwl.j)));
-      qh.a($$0, q, drn.k, new dum(eel.e.g(), true, 4, 1, il.a(cwj::r, cwl.dP, cwl.qP, cwl.iC)));
-      qh.a($$0, r, drn.k, new dum(eel.c.g(), true, 4, 1, il.a(cwj::r, cwl.b, cwl.c, cwl.e, cwl.g, cwl.sJ, cwl.qz, cwl.qN, cwl.j, cwl.dP, cwl.qP, cwl.iC)));
+   public static void a(pe<drg<?, ?>> $$0) {
+      qj.a($$0, a, drt.J, new dur(false, ImmutableList.of(), null));
+      qj.a($$0, b, drt.L, dtw.a(and.a, true));
+      qj.a($$0, c, drt.L, dtw.a());
+      qj.a($$0, d, drt.l);
+      qj.a($$0, e, drt.K);
    }
 }
